# agentic-dataxtr

./: .env.example  .gitignore  CHUNKING_FEATURE_SUMMARY.md  README.md  TESTING_GUIDE.md  agents.md  pyproject.toml  test_chunking_demo.py  test_chunking_verification.py  test_financial_extraction.py  test_ibjjf_chunking.py
.claude/: settings.local.json
examples/: README_EXCEL.md  __init__.py  basic_extraction.py  chunking_pdf_tables.py  custom_schema.py  excel_extraction.py
src/dataxtr/: __init__.py
src/dataxtr/agents/: __init__.py  base.py  extraction.py  field_prep.py  quality.py
src/dataxtr/graph/: __init__.py  builder.py  nodes.py  state.py
src/dataxtr/models/: __init__.py  antigravity_client.py  config.py  router.py
src/dataxtr/schemas/: __init__.py  chunks.py  fields.py  quality.py  results.py
src/dataxtr/services/: __init__.py  document_chunker.py  document_parser.py  ocr_service.py  table_extractor.py
src/dataxtr/tools/: __init__.py  document_tools.py
tests/: __init__.py  conftest.py  test_schemas.py
